--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,12 @@
 name: Node CI
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    types: [opened, synchronize]
+    branches: [ master ]
+
 
 jobs:
     build:
